# Archon

./: .gitignore  .gitmodules  README.md  api_keys.json  archon_env.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
archon/: __init__.py  archon.py  benchmarks.py  gen_answers.py  itas_algorithm.py  power_ranker.py  quickstart.py  utils.py
archon/alpaca_eval/: README.md
archon/arena_hard_auto/: arena_hard_auto_utils.py  gen_judgment.py  show_arena_hard_auto_result.py
archon/clas_algorithms/: README.md
archon/code_contests/: README.md  code_contests.py
archon/components/: Component.py  Critic.py  Fuser.py  Generator.py  Ranker.py  Unit_Test_Evaluator.py  Unit_Test_Generator.py  Verifier.py
archon/configs/: Llama-3-70B-chat.json  Llama-3.1-405B_with_critic_and_ranker.json  Llama-3.1-8B.json  MoA-4_layers.json  MoA-lite.json  MoA.json  MoA_three_proposer_layers_of_70Bx8_models_to_4_models_to_2_models_with_Qwen2_72B_for_aggregation_layer.json  Qwen1.5-72B-Chat.json  Wizard8x22_10-alone.json  Wizard8x22_10_samples_then_critic_then_fuser_with_Qwen_1.5_110B.json  Wizard8x22_for_everything_10_samples_then_critic_then_fuser.json  archon-1-110bFuser-1-110bM5S.json  archon-1-110bFuser-1-110bRanker3-1-110BCritic-8-70BM.json  archon-1-110bFuser-1-110bRanker3-8-70BM.json  archon-1-110bFuser-1-110bRanker3-8-70BM1.25T.json  archon-1-110bFuser-1-110bRanker3-8-70BM3S.json  archon-1-110bFuser-1-110bRanker5-1-110BCritic-8-70BM.json  archon-1-110bFuser-1-110bRanker5-1-Qwen2_72BCritic-8-70BM.json  archon-1-110bFuser-1-WizardLM5S.json  (+54 more)
src/: quickstart.py
(+304 files in other folders)
